@@ -1667,6 +1667,13 @@ int command_listplugins(object *op, char *params)
  * Loads the given plugin. The DM specifies the name of the library to load (no
  * pathname is needed). Do not ever attempt to load the same plugin more than
  * once at a time, or bad things could happen.
+ *
+ * @param op
+ * DM loading a plugin.
+ * @param params
+ * should be the plugin's name, eg cfpython.so
+ * @return
+ * 1
  */
 int command_loadplugin(object *op, char *params) {
     char buf[MAX_BUF];
@@ -1680,8 +1687,10 @@ int command_loadplugin(object *op, char *params) {
     strcat(buf, "/plugins/");
     strcat(buf, params);
     LOG(llevDebug, "Requested plugin file is %s\n", buf);
-    if (plugins_init_plugin(buf) == 0)
+    if (plugins_init_plugin(buf) == 0) {
+        LOG(llevInfo, "DM %s loaded plugin %s\n", op->name, params);
         new_draw_info(NDI_UNIQUE, 0, op, "Plugin successfully loaded.");
+    }
     else
         new_draw_info(NDI_UNIQUE, 0, op, "Could not load plugin.");
     return 1;
@@ -1691,6 +1700,13 @@ int command_loadplugin(object *op, char *params) {
  * Unloads the given plugin. The DM specified the ID of the library to unload.
  * Note that some things may behave strangely if the correct plugins are not
  * loaded.
+ *
+ * @param op
+ * DM unloading a plugin.
+ * @param params
+ * should be the plugin's internal name, eg Python
+ * @return
+ * 1
  */
 int command_unloadplugin(object *op, char *params)
 {
@@ -1699,8 +1715,10 @@ int command_unloadplugin(object *op, char *params)
         return 1;
     }
 
-    if (plugins_remove_plugin(params) == 0)
+    if (plugins_remove_plugin(params) == 0) {
+        LOG(llevInfo, "DM %s unloaded plugin %s\n", op->name, params);
         new_draw_info(NDI_UNIQUE, 0, op, "Plugin successfully removed.");
+    }
     else
         new_draw_info(NDI_UNIQUE, 0, op, "Could not remove plugin.");
     return 1;
